XCOMMONS-2276: Upgrade to HtmlCleaner 2.29
  * Update comments and minor style refactoring